# root

./: README.md
other/: FancyPlot.py  LatexTableMaker.py
pyrootcpp/: CMakeLists.txt  LinkDef.h  README.md  main.C  run.py
pyrootcpp/header/: head.h
pyrootcpp/source/: src.C
scripts/: helpers.py  titanic.py
tmva/: TMVAClassification.cpp
tmva/dataset/weights/: TMVAClassification_BDT.class.C  TMVAClassification_BDT.weights.xml  TMVAClassification_Cuts.class.C  TMVAClassification_Cuts.weights.xml  TMVAClassification_CutsD.class.C  TMVAClassification_CutsD.weights.xml  TMVAClassification_DNN_CPU.class.C  TMVAClassification_DNN_CPU.weights.xml  TMVAClassification_FDA_GA.class.C  TMVAClassification_FDA_GA.weights.xml  TMVAClassification_KNN.class.C  TMVAClassification_KNN.weights.xml  TMVAClassification_LD.class.C  TMVAClassification_LD.weights.xml  TMVAClassification_Likelihood.class.C  TMVAClassification_Likelihood.weights.xml  TMVAClassification_LikelihoodPCA.class.C  TMVAClassification_LikelihoodPCA.weights.xml  TMVAClassification_MLPBNN.class.C  TMVAClassification_MLPBNN.weights.xml  TMVAClassification_PDEFoam.class.C  TMVAClassification_PDEFoam.weights.xml  TMVAClassification_PDEFoam.weights_foams.root  TMVAClassification_PDERS.class.C  TMVAClassification_PDERS.weights.xml  TMVAClassification_RuleFit.class.C  TMVAClassification_RuleFit.weights.xml  TMVAClassification_SVM.class.C  TMVAClassification_SVM.weights.xml
